--- a/packages/oui-select/_mixins.less
+++ b/packages/oui-select/_mixins.less
@@ -26,8 +26,7 @@
       width: 100%;
       max-width: 100%;
       min-height: rem-calc(36);
-      padding: @padding ~"calc(@{icon-size} + @{padding} * 2 + 1rem)" @padding ~"calc(@{padding} - 0.4rem)";
-      -webkit-padding-start: @padding;
+      padding: @padding ~"calc(@{icon-size} + @{padding} * 2 + 1rem)" @padding @padding;
       border: 1px solid @border-color;
       border-radius: @oui-global-base-radius;
       background: #fff;
@@ -39,6 +38,15 @@
       option {
         background: #fff;
       }
+
+      // Firefox adds a small padding before text so we need to remove it
+      @-moz-document url-prefix() {
+        padding-left: calc(@padding - 0.4rem);
+      }
+
+      select&::-ms-expand {
+        display: none;
+      }
     }
 
     &__input:focus {
@@ -49,7 +57,7 @@
       box-shadow: inset 1px 1px 2px 0px rgba(102, 199, 214, 0.5), 0px 0px 3px 0px rgba(0, 0, 0, 0.35);
       background: #f5fcfd;
 
-      ~ .@{icon-selector}:before {
+      ~ .@{icon-selector}::before {
         color: #0090b1;
       }
     }
@@ -75,7 +83,7 @@
       cursor: pointer;
       pointer-events: none;
 
-      &:before {
+      &::before {
         color: @oui-color-shuttle;
         font-size: @icon-size;
       }
